<resources>
    <string name="app_name">ReGo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save_the_pl">SAVE THE PLANET</string>
    <string name="facebook_app_id">346891772846562</string>
    <string name="fb_login_protocol_scheme">fb346891772846562</string>
    <string name="email">Email</string>
    <string name="l_senord">Lösenord</string>
    <string name="gl_mt_l_sen">Glömt Lösenord?</string>
    <string name="sparad_co2">\nSparad \nco2</string>
    <string name="finished_challanges">Avklarade utmaningar</string>
    <string name="finished_challanges_number">0</string>
    <string name="ongoing_challenges">Dina pågående utmaningar</string>
    <string name="take_challenge">Anta ny utmaning! \n
    +</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="finished_challenges">Avklarade utmaningar</string>
    <string name="show_all_finished_text">Visa alla avklarade</string>
    <string name="add_challenge_text">Anta en ny utmaning</string>
    <string name="sign_out_text">Logga ut</string>
    <string name="challenge_title">Utmaningar</string>
    <string name="challenges_header_title">Välj den kategori som ligger dig närmast hjärtat!</string>
    <string name="challenge_of_the_month_text">Månadens utmaning</string>
    <string name="all_challenges_text">Alla utmaningar</string>
    <string name="reduce_label">Reduce</string>
    <string name="reuse_label">Reuse</string>
    <string name="recycle_label">Recycle</string>
    <string name="join_text">Gå med</string>
    <string name="share_on_facebook_text">Dela på Facebook</string>
    <string name="cancel_text">Gå ur utmaning</string>
    <string name="facebook_apk_share">Dela</string>
    <string name="information_test_1">På bilden ser du stranden på Fraser Island i Queensland, Australien. Det är en av de renaste stränderna i världen. Känd för sin röda korallsand och hem till ett mångfald av djur och växter. Bland annat bor det här hela 350 fågelarter samt den berömda hundarten Dingo. Genom att minska din användning av engångsplast kan du hjälpa till att bevara stränder som denna.\n</string>
    <string name="stop_using_text">Sluta använd:</string>
    <string name="stop_using2">Plastsugrör, plastpåsar, plastbestick.</string>
    <string name="use_instead_text">\nAnvänd i stället:</string>
    <string name="use_instead2">Ta med en tygkasse när du går och handlar, lägg den i väskan så glöms den inte bort. Det bästa alternativet till plastsugrör är att inte använda sugrör alls. Om du fortfarande vill använda sugrör finns det varianter i metall som kan diskas och användas flera gånger. Planera i förväg och ta med dig egna bestick hemifrån när du tror att det kan behövas.</string>
    <string name="information_test_3">\nUtmaningen pågår under 1 månad\n</string>
    <string name="information_text_1">Ovan syns bin från Ålbrunna gård, en liten gård i utkanten av Stockholms län i Upplands-Bro kommun. De säljer honung från egen bigård och ägg från deras frigående höns. Honungen produceras på ett miljömedvetet sätt och hönorna får leva ett naturligt liv. Genom att köpa lokalt på gårdar som Ålbrunna kan du minska din miljöpåverkan samtidigt som du gör en tjänst för djuren.</string>
    <string name="description">\nBeskrivning:</string>
    <string name="buy_local_description">\nGå en vecka av att i största möjliga mån köpa lokala råvaror. Sök upp dina närmaste handlare och se vad du kan ersätta bland dina vanliga inköp.</string>
    <string name="length_buy_local">\nUtmaningen pågår under 1 vecka\n</string>
    <string name="ocean_header_text">Havet</string>
    <string name="ocean_explaination_text">Havet är hem till 80% av den biologiska mångfald vi har på jorden. Det är också den största källan av det syre vi andas.</string>
    <string name="nature_header_text">Natur</string>
    <string name="nature_explaination_text">Naturen har stor inverkan på människors hälsa. Forskning har visat  att vistelser i naturliga miljöer minskar negativa känslor och stress. </string>
    <string name="animals_header_text">Djur</string>
    <string name="animals_explaination_text">Djuren är en viktig del av vårt ekosystem. De försörjer oss med råvaror, kunskap, trevnad och utgör den biologiska mångfalden.</string>
    <string name="air_header_text">Luft</string>
    <string name="air_explaination_text">Livet på jorden är helt och hållet beroende av luften. Det är därför viktigt att vi tillsammans jobbar för en bra och hälsosam luft.</string>
    <string name="show_more_info_text">Läs mer</string>
    <string name="finish_challenge_text">Avklarad!</string>
    <string name="information_text">Information</string>
    <string name="no_plastic_text">Inga engångsartiklar i plast på \nen månad!</string>
    <string name="shower_time_text">Minska din tid \ni duschen!</string>
    <string name="vegetarian_food_text">Två vegetariska \ndagar i veckan!</string>
    <string name="driving_challenge_text">Reducera ditt bilåkande \nmed hälften!</string>
    <string name="plant_challenge_text">Odla dina egna \ngrönsaker!</string>
    <string name="no_plastic_food_challenge_text">Laga mat med \ningredienser utan \nplastförpackningar</string>
    <string name="buy_local_challenge_text">Köp lokala råvaror!</string>
    <string name="electricity_challenge_text">Minska din \nelförbrukning!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_item_map">Karta</string>
    <string name="menu_item_home">Översikt</string>
    <string name="menu_item_guide">Guide</string>
    <string name="menu_item_tips">Tips</string>
    <string name="filter_stations_button_default">Filtrera</string>
    <string name="on_my_location_button_click">Nuvarande position</string>
    <string name="on_my_location_click">Nuvarande position</string>
    <string name="warning_message_user_denied_location_request">Vissa av appens funktioner fungerar inte utan tillgång till din position</string>
    <string name="positive_option">Ja</string>
    <string name="info_message_please_enable_gps">Appen behöver platsinformation för att fungera korrekt, vill du slå på platsfunktioner?</string>
    <string name="filter_stations">Filtrera stationer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FILTER_DIALOG_DEFAULT">Filtrera stationer</string>
    <string name="title_activity_station">Station</string>
    <string name="failed_to_get_recycling_stations">Kunde inte hämta återvinningsstationer</string>
    <string name="search_hint">Sök återvinningsstation</string>
    <string name="SELECT_ALL_MATERIALS">Alla</string>
    <string name="API_fail_get_materials">Ett fel gjorde att återvinningsstationerna i kartan inte kan filtreras på material att återvinna</string>
    <string name="INTENT_KEY_STATION">station</string>
    <string name="INTENT_KEY_USER">user</string>
    <string name="INTENT_KEY_CAMERA_LAT">camera center latitude</string>
    <string name="INTENT_KEY_CAMERA_LONG">camera center longitude</string>
    <string name="INTENT_KEY_CAMERA_ZOOM">camera zoom level</string>
    <string name="FILTER_DIALOG_ACTIVE">Visar stationer enligt filterval</string>
    <string name="filter_stations_button_active">Stationer filtreras</string>
    <string name="API_fail_get_station_reports">Kunde inte hämta eventuella felanmälningar på stationen</string>
    <string name="cancel_option_dialog">Avbryt</string>
    <string name="positive_option_dialog">OK</string>
    <string name="report_dialog_header">Välj det eller de alternativ som passar</string>
    <string name="materials_dialog_header">Vilka är fulla?</string>
    <string name="NEEDS_CLEANING">stökig</string>
    <string name="item_text_report_type_needs_cleaning">Rapporterad som\u0020</string>
    <string name="item_text_report_type_full">\u0020rapporterad som full</string>
    <string name="report_item_description_1">Rapporterat av\u0020</string>
    <string name="report_item_description_2">\u0020personer</string>
    <string name="report_item_no_reports">Inga aktuella felanmälningar</string>
    <string name="report_item_full">Full</string>
    <string name="report_item_needs_cleaning">Stökig</string>
    <string name="SERVER_SCHEME">https</string>
    <string name="SERVER_HOST">recycling-rest.herokuapp.com</string>
    <string name="SERVER_PATH_REPORTS">/reports/</string>
    <string name="INTENT_KEY_USER_LOCATION">location</string>
    <string name="open_google_maps_dialog">Öppna Google Maps?</string>
    <string name="positive_option_google_maps_dialog">Ja</string>
    <string name="google_maps_uri_navigation">google.navigation:q=</string>
    <string name="google_maps_package">com.google.android.apps.maps</string>
    <string name="error_message_open_maps">Kunde inte öppna Google Maps</string>
    <string name="negative_option_google_maps_dialog">Nej</string>
    <string name="INTENT_KEY_STATION_LIST">listOfStations</string>
    <string name="report_text">Rapportera</string>
    <string name="navigate_text">Navigera mig hit</string>
    <string-array name="materials_array">
        <item>Alla</item>
        <item>Glas</item>
        <item>Kartong</item>
        <item>Metall</item>
        <item>Blandplast</item>
        <item>Tidningar</item>
    </string-array>
    <string name="sorteringsg">

Sorteringsguide

</string>
    <string name="om_du_r_os_">

Om du är osäker på hur något ska sorteras kan du få hjälp här!
</string>
    <string name="tips_vid_so">

Guide vid sortering av metall
</string>
    <string name="tips_vid_glas">

Guide vid sortering av glas

</string>
    <string name="glas_header">

Glas

</string>
    <string name="tidningar_header">

Tidningar

</string>
    <string name="tips_vid_tidningar">

Guide vid sortering av tidningar

</string>
    <string name="tidningar">


\n<b>Tidningar, tidskrifter, kataloger, reklamblad och andra trycksaker – allt kan återvinnas.\n</b>

\nI återvinningsbehållare för tidningar och returpapper lägger du dags- och veckotidningar, tidskrifter, kataloger (postorder-, telefon- och resekataloger), reklamblad, broschyrer, kontorspapper, skriv- och ritpapper och pocketböcker. Allt kan återvinnas.\n

\nTa bort plastomslag runt tidningar och reklam och lämna dessa som plastförpackning. Omslagspappret kring skrivarpapper lämnas som pappersförpackning.\n

\nHäftklamrar, spiraler och dylikt behöver du inte ta bort från tidningar eller block. De avskiljs med magneter och skickas till metallåtervinning.\n

\nLämna dina tidningar på en återvinningsstation.

\nOm det finns insamling för tidningar vid eller i din fastighet kan du lämna dem där. På många av kommunernas bemannade återvinningscentraler står också insamlingsbehållare för återvinning av förpackningar.\n

\nPapper som inte ska läggas i behållare för tidningar är till exempel kuvert och inbundna böcker som istället läggs i vanliga soppåsen/brännbart. Mjölkförpackningar, omslagspapper och liknande läggs i behållaren för pappersförpackningar.\n

</string>
</resources>