<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenges.FinishChallengeOverviewActivity"
    android:background="@drawable/background_homepage">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/no_plastic_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="75dp">


            <ImageView
                android:id="@+id/challengeImage"
                android:layout_width="373dp"
                android:layout_height="225dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/no_plastic_challenge" />

            <com.facebook.share.widget.ShareButton
                android:id="@+id/fb_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:background="@color/com_facebook_blue"
                android:onClick="share"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/facebook_apk_share"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/challengeInformationKontext"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="8sp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:text="@string/information_test_1"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stop_using_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stopUsing2"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stop_using2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/use_instead_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/use_instead2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/information_test_3"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@color/ReGoRed"
                    android:gravity="center"
                    android:text="@string/cancel_text"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/finishButton"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_corners_border"
                    android:gravity="center"
                    android:text="@string/finish_challenge_text"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>